Edit index.html and Create js.js

--- a/Registration employee/index.html
+++ b/Registration employee/index.html
@@ -52,12 +52,14 @@
 
     <div class="flex-wrapper-three">
         <input type="submit" value="Зарегистрироваться" class="button-ref">
-        <input type="submit" value="Отмена" class="cancell-button">
+        <input type="submit" value="Отмена" class="cancell-button" id="Cancel_button">
+
+
     </div>
 
     </div>
 </form>
 
-
+<script src="js.js"></script>
 </body>
 </html>
