Edit index.html and Create registration.js

--- a/Authorization/index.html
+++ b/Authorization/index.html
@@ -25,13 +25,13 @@
                id="signup-password">
 
         <div class="flex-wrapper-two" style="margin-left: 20px;">
-            <p><input type="submit" value="Войти" class="b1label"></p>
-            <p><input type="submit" value="Зарегистрироваться" id="signup-sumbit" class="reg-label"></p>
+            <p><input type="submit" value="Войти" id="login-send" class="b1label"></p>
+            <p><input type="submit" value="Зарегистрироваться" id="signup_sumbit" class="reg-label"></p>
         </div>
     </div>
 
 </form>
 
-
+<script src="registration.js"></script>
 </body>
 </html>
