modified file "index.html" changed page header restyling

--- a/Authorization/index.html
+++ b/Authorization/index.html
@@ -12,8 +12,8 @@
 <body>
 <form class="avtorizacija" action="authorization.php" method="post" enctype="multipart/form-data">
     <div class="flex-wrapper-one">
-        <p class="labelvsu">ВГТУ</p>
-        <p class="labelmer">мероприятия</p>
+        <img src="../resourses/VSTU.png" class="logo">
+        <p class="labelmer">MЕРОПРИЯТИЯ</p>
     </div>
 
     <div style="margin-left: auto; margin-right: auto;">
