--- a/Authorization/index.html
+++ b/Authorization/index.html
@@ -18,11 +18,11 @@
 
     <div style="margin-left: auto; margin-right: auto;">
 
-        <p class="username-label">Имя пользователя (e-mail)</p>
+        <p class="username-label">имя пользователя (e-mail)</p>
         <input type="text" name="name" size="40" class="user-name-area" placeholder="Введите имя пользователя"
                id="signup-name">
 
-        <p class="pass-label">Пароль</p>
+        <p class="pass-label">ПАРОЛЬ</p>
         <input type="text" name="password" size="40" class="user-name-area" placeholder="Введите пароль"
                id="signup-password">
 
