changed auth form inserted label for auth

--- a/Authorization/index.html
+++ b/Authorization/index.html
@@ -11,17 +11,25 @@
 </head>
 
 <body>
+
+<div class = "h1container">
+    <h1 style="color: var(--gold); margin-bottom: -5px"> јвторизуйтесь </h1>
+    <h1 style="font-size: 13px; color: var(--dim-gray)"> дл€ входа в систему</h1>
+</div>
+
 <form class="avtorizacija" action="authorization.php" method="post" enctype="multipart/form-data">
     <div class="flex-wrapper-one">
         <img src="../resourses/VSTU.png" class="logo">
         <p class="labelmer">M≈–ќѕ–»я“»я</p>
     </div>
 
+
+
     <div class="limiter">
         <div class="container-login100">
             <div class="wrap-login100">
 
-        <div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
+        <div class="wrap-input100 validate-input">
             <input class="input100" type="text" name="email" id="signup-name" placeholder="логин">
             <span class="focus-input100" data-placeholder="Email"></span>
         </div>
