registration.js = new form

--- a/Authorization/index.html
+++ b/Authorization/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Авторизация</title>
+    <title>Авторизация | Мероприятия ВГТУ</title>
     <link rel="stylesheet" href="style.css"></link>
 
     <div class="header">
@@ -20,7 +20,7 @@
 <form class="avtorizacija" action="authorization.php" method="post" enctype="multipart/form-data">
     <div class="flex-wrapper-one">
         <img src="../resourses/VSTU.png" class="logo">
-        <p class="labelmer">MЕРОПРИЯТИЯ</p>
+        <p class="labelmer">МЕРОПРИЯТИЯ</p>
     </div>
 
 
@@ -29,22 +29,22 @@
         <div class="container-login100">
             <div class="wrap-login100">
 
-        <div class="wrap-input100 validate-input">
-            <input class="input100" type="text" name="email" id="signup-name" placeholder="логин">
-            <span class="focus-input100" data-placeholder="Email"></span>
-        </div>
+                <div class="wrap-input100 validate-input">
+                    <input class="input100" type="text" name="email" id="signup-name" placeholder="логин">
+                    <span class="focus-input100" data-placeholder="Email"></span>
+                </div>
 
-        <div class="wrap-input100 validate-input">
-        <input class="input100" type="password" name="pass" id="signup-password" placeholder="пароль">
-        <span class="focus-input100" data-placeholder="Password"></span>
-        </div>
+                <div class="wrap-input100 validate-input">
+                    <input class="input100" type="password" name="pass" id="signup-password" placeholder="пароль">
+                    <span class="focus-input100" data-placeholder="Password"></span>
+                </div>
 
-        <div class="flex-wrapper-two">
-            <p><input type="submit" value="Войти" id="login-send" class="b1label"></p>
-            <p><input type="submit" value="Зарегистрироваться" id="signup_sumbit" class="reg-label"></p>
+                <div class="flex-wrapper-two">
+                    <p><input type="submit" value="Войти" id="login-send" class="b1label"></p>
+                    <p><input type="submit" value="Зарегистрироваться" id="signup_sumbit" class="reg-label"></p>
+                </div>
+            </div>
         </div>
-    </div>
-    </div>
     </div>
 </form>
 
