Edit button "Войти"

--- a/Registration employee/index.html
+++ b/Registration employee/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="flex-wrapper-two">
-            <p><input type="submit" value="Назад" id="signup_sumbit" class="b1label"></p>
+            <p><input type="submit" value="Назад" id="Cancel_button" class="b1label"></p>
             <p><input type="submit" value="Зарегистрироваться" id="login-send" class="reg-label"></p>
         </div>
     </div>
@@ -72,7 +72,7 @@
     </div>
 </form>
 
-<script src="registration.js"></script>
+<script src="js.js"></script>
 
 </body>
 </html>
