--- a/Authorization/index.html
+++ b/Authorization/index.html
@@ -12,43 +12,48 @@
 
 <body>
 
-<div class = "h1container">
+<div class="h1container">
     <h1 style="color: var(--gold); margin-bottom: -5px"> Авторизуйтесь </h1>
     <h1 style="font-size: 13px; color: var(--dim-gray)"> для входа в систему</h1>
 </div>
 
-<form class="avtorizacija" action="authorization.php" method="post" enctype="multipart/form-data">
+
+<form action="authorization.php" method="get" class="avtorizacija">
     <div class="flex-wrapper-one">
         <img src="../resourses/VSTU.png" class="logo">
         <p class="labelmer">МЕРОПРИЯТИЯ</p>
     </div>
 
 
-
     <div class="limiter">
         <div class="container-login100">
             <div class="wrap-login100">
-
                 <div class="wrap-input100 validate-input">
                     <input class="input100" type="text" name="email" id="signup-name" placeholder="логин">
                     <span class="focus-input100" data-placeholder="Email"></span>
                 </div>
-
                 <div class="wrap-input100 validate-input">
-                    <input class="input100" type="password" name="pass" id="signup-password" placeholder="пароль">
+                    <input class="input100" type="text" name="pass" id="signup-password" placeholder="пароль">
                     <span class="focus-input100" data-placeholder="Password"></span>
                 </div>
-
                 <div class="flex-wrapper-two">
+
+
+<!--                    <input type="submit" name="submit" value="Отправь меня!"/>-->
+
                     <p><input type="submit" value="Войти" id="login-send" class="b1label"></p>
                     <p><input type="submit" value="Зарегистрироваться" id="signup_sumbit" class="reg-label"></p>
                 </div>
+
             </div>
         </div>
     </div>
+
+
 </form>
 
 <script src="registration.js"></script>
+<!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>-->
 
 </body>
 </html>
